@@ -97,7 +97,8 @@ public class CrawlTestHarness implements Closeable {
 
     private final OrderedMap<String, TestCrawler> nodeCrawlers =
             new ListOrderedMap<>();
-    private final ExecutorService executor = Executors.newCachedThreadPool();
+    private final ExecutorService executor =
+            Executors.newVirtualThreadPerTaskExecutor();
 
     public CompletableFuture<CrawlTestHarnessResult> launchAsync(
             @NonNull String... nodeNames) {
@@ -341,6 +342,13 @@ public class CrawlTestHarness implements Closeable {
 
             // Ensure this harness run forms its own cluster.
             connConfig.setClusterName(hazelcastClusterName);
+
+            // When running multiple nodes in the same JVM, each must have a
+            // unique instance name to be treated as a separate cluster member.
+            if (!instrument.isNewJvm()) {
+                connConfig
+                        .setInstanceName(hazelcastClusterName + "-" + nodeName);
+            }
 
             // Configure the JDBC configurer directly — no YAML file needed.
             var configurer =
